began basic HTML structure

--- a/Index.html
+++ b/Index.html
@@ -7,9 +7,39 @@
       integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="/src/styles.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Weather app</title>
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <h1>Philadelphia</h1>
+      <ul>
+        <li>Thursday 8:33pm</li>
+      </ul>
+      <div class="row">
+        <div class="col-6">
+          <img
+            src="https://cdn2.iconfinder.com/data/icons/weather-54/100/sunny_2-01-512.png"
+            width="100"
+            alt="clear sky"
+          />
+          <span> 64°F | C</span>
+          <div class="col-6">
+            <ul>
+              <li>Clear skies</li>
+              <li>Humidity 0%</li>
+              <li>Precipition 0%</li>
+              <li>Wind 2.06km/h</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <small>
+        <a href=""></a>
+      </small>
+    </div>
+  </body>
+  <script src="src/script.js"></script>
 </html>
