--- a/Index.html
+++ b/Index.html
@@ -14,35 +14,37 @@
   </head>
   <body>
     <div class="container">
-      <div class="row">
-        <div class="col-6">
-          <h1>Philadelphia</h1>
-          <h3 class="curentTemp">64°F | C</h3>
-          <ul>
-            <li>Friday May 14th, 2021 9:28pm</li>
-            <li>Clear Skies</li>
-            <li>Precipitation 0%</li>
-            <li>Humidity 73%</li>
-            <li>Wind 2 km/h</li>
-          </ul>
-        </div>
-          <div class="col">
-            
+      <div class="weather-app-wrapper">
+        <div class="weather-app">
+          <div class="row">
+            <div class="col-6">
+              <h1>Philadelphia</h1>
+              <h3 class="current-temp">64°F | C</h3>
+              <ul>
+                <li>Friday May 14th, 2021 9:28pm</li>
+                <li>Clear Skies</li>
+                <li>Precipitation 0%</li>
+                <li>Humidity 73%</li>
+                <li>Wind 2 km/h</li>
+              </ul>
+            </div>
+            <div class="col">
               <img
                 src="https://ssl.gstatic.com/onebox/weather/64/sunny_s_cloudy.png"
                 alt="Cloudy"
-              /> 
+              />
+            </div>
           </div>
         </div>
-        <a
-          href="https://github.com/CarlyssaCodes/Vanilla-Weather-App"
-          target="_blank"
-          >Open-Source code </a
-        >by Carlyssa Pierre
-      </small>
+        <small>
+          <a
+            href="https://github.com/CarlyssaCodes/Vanilla-Weather-App"
+            target="_blank"
+            >Open-Source code </a
+          >by Carlyssa Pierre
+        </small>
       </div>
-      <small>
-        
+    </div>
   </body>
   <script src="src/script.js"></script>
 </html>
