Cleaned up HTML and added more CSS

--- a/Index.html
+++ b/Index.html
@@ -9,6 +9,11 @@
     />
     <link rel="stylesheet" href="src/styles.css" />
     <meta charset="UTF-8" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Anton&family=Montserrat&display=swap"
+      rel="stylesheet"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Weather app</title>
   </head>
@@ -21,18 +26,15 @@
               <h1>Philadelphia</h1>
               <h3 class="current-temp">64°F | C</h3>
               <ul>
-                <li>Friday May 14th, 2021 9:28pm</li>
-                <li>Clear Skies</li>
-                <li>Precipitation 0%</li>
+                <li>Fri, May 14th 9:28pm</li>
+                <li>Clear skies</li>
+                <li>Feels like 60°F</li>
                 <li>Humidity 73%</li>
                 <li>Wind 2 km/h</li>
               </ul>
             </div>
             <div class="col">
-              <img
-                src="https://ssl.gstatic.com/onebox/weather/64/sunny_s_cloudy.png"
-                alt="Cloudy"
-              />
+              <img src="icons/partly-cloudy.png" alt="Cloudy" />
             </div>
           </div>
         </div>
