Now showing current time

--- a/Index.html
+++ b/Index.html
@@ -28,9 +28,9 @@
               <h3 class="current-temp"><span id="temp"></span> °F</h3>
 
               <ul>
-                <li id="date">Fri, May 14th 9:28pm</li>
+                <li><span id="date"></span></li>
                 <li id="description"></li>
-                <li>Feels like <span id="feels-like"></span></li>
+                <li>Feels like <span id="feels-like"></span>°F</li>
                 <li>Humidity: <span id="humidity"></span>%</li>
                 <li>Wind: <span id="wind-speed"></span> km/h</li>
               </ul>
