Added current icon from API

--- a/Index.html
+++ b/Index.html
@@ -36,7 +36,7 @@
               </ul>
             </div>
             <div class="col">
-              <img src="icons/partly-cloudy.png" alt="Cloudy" />
+              <img src="" id="icon" alt="Cloudy" />
             </div>
           </div>
         </div>
