--- a/Index.html
+++ b/Index.html
@@ -24,6 +24,16 @@
         <div class="weather-app">
           <div class="row">
             <div class="col-6">
+              <div class="row">
+                <div class="col-9">
+              <form id="search-form" >
+                <input class="form-control" type="search" placeholder="Search City..." />
+              </div>
+            <div class="col-3">
+                <input class="btn-primary" type="submit" value="search">
+                </div>
+                </div>
+              </form>
               <h1 id="city"></h1>
               <h3 class="current-temp"><span id="temp"></span> °F</h3>
 
