Added search engine in JS

--- a/Index.html
+++ b/Index.html
@@ -26,8 +26,8 @@
             <div class="col-6">
               <div class="row">
                 <div class="col-9">
-              <form id="search-form" >
-                <input class="form-control" type="search" placeholder="Search City..." />
+              <form id="search-form" class="mb-3" >
+                <input id="city-input" class="form-control" type="search" autocomplete="off" placeholder="Search City..." />
               </div>
             <div class="col-3">
                 <input class="btn-primary" type="submit" value="search">
