Updated UI for temperature conversion

--- a/Index.html
+++ b/Index.html
@@ -35,7 +35,7 @@
                 </div>
               </form>
               <h1 id="city"></h1>
-              <h3 class="current-temp"><span id="temp"></span> <span class="units"> <a href="#" id="fahrenheit-link">°F</a> | <a href="#" id="celsius-link">C°</a> </span></h3>
+              <h3 class="current-temp"><span id="temp"></span> <span class="units"> <a href="#" id="fahrenheit-link" class="active">°F</a> | <a href="#" id="celsius-link">C°</a> </span></h3>
 
               <ul>
                 <li><span id="date"></span></li>
