Added forecast HTML and CSS

--- a/Index.html
+++ b/Index.html
@@ -49,6 +49,18 @@
               <img src="" id="icon" alt="Cloudy" />
             </div>
           </div>
+          <div class="weather-forecast">
+            <div class="row">
+              <div class="col-2">
+                <span class="weather-forecast-date">Thursday</span>
+                <img src="http://openweathermap.org/img/wn/10d@2x.png" alt="Rainy" width="60px">
+              
+              <div class="weather-forecast-temp">
+                <span class="weather-forecast-temp-min">18°</span> <span class="weather-forecast-temp-max">20°</span> 
+              </div>
+            </div>
+            </div>
+          </div>
         </div>
         <small>
           <a
