--- a/Index.html
+++ b/Index.html
@@ -27,15 +27,15 @@
               <div class="row">
                 <div class="col-9">
               <form id="search-form" class="mb-3" >
-                <input id="city-input" class="form-control" type="search" autocomplete="off" placeholder="Search City..." />
+                <input id="city-input" class="form-control-sm" type="search" autocomplete="off" placeholder="Search City..." />
               </div>
             <div class="col-3">
-                <input class="btn-primary" type="submit" value="search">
+                <input class="btn btn-primary" type="submit" value="search">
                 </div>
                 </div>
               </form>
               <h1 id="city"></h1>
-              <h3 class="current-temp"><span id="temp"></span> <span class="units"> <a href="#" class="active">°F</a> </span></h3>
+              <h3 class="current-temp"><span id="temp"></span> <span class="units">°F </span></h3>
 
               <ul>
                 <li><span id="date"></span></li>
@@ -46,7 +46,7 @@
               </ul>
             </div>
             <div class="col">
-              <img src="" id="icon" alt="Cloudy" />
+              <img src="" class="current-weather-icon" id="icon" alt="Cloudy" />
             </div>
           </div>
           <div class="weather-forecast" id="forecast">
