Made more changes to UI in CSS

--- a/Index.html
+++ b/Index.html
@@ -24,16 +24,17 @@
         <div class="weather-app">
           <div class="row">
             <div class="col-6">
-              <div class="row">
-                <div class="col-9">
-              <form id="search-form" class="mb-3" >
-                <input id="city-input" class="form-control-sm" type="search" autocomplete="off" placeholder="Search City..." />
+              <form id="search-form">
+                <input id="city-input" class="city-form" type="search" autocomplete="off" placeholder="Search a City..." />
               </div>
             <div class="col-3">
-                <input class="btn btn-primary" type="submit" value="search">
+                <input class="btn" type="submit" value="search">
                 </div>
                 </div>
               </form>
+              <div class="row">
+                <div class="col-6">
+              
               <h1 id="city"></h1>
               <h3 class="current-temp"><span id="temp"></span> <span class="units">°F </span></h3>
 
